[gd_scene load_steps=2 format=3 uid="uid://duqkgrwag2bi5"]

[ext_resource type="Script" path="res://test_scene.gd" id="1_ortbw"]

[node name="TestScene" type="CanvasLayer"]
script = ExtResource("1_ortbw")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -346.5
offset_top = -97.0
offset_right = 346.5
offset_bottom = 97.0
grow_horizontal = 2
grow_vertical = 2

[node name="NameTextEdit" type="TextEdit" parent="Control/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
placeholder_text = "NOME A SER ENVIADO"

[node name="ScoreTextEdit" type="TextEdit" parent="Control/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
placeholder_text = "SCORE"

[node name="GetButton" type="Button" parent="Control/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "GET"

[node name="PostButton" type="Button" parent="Control/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "POST"

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[connection signal="pressed" from="Control/VBoxContainer/GetButton" to="." method="_on_get_button_pressed"]
[connection signal="pressed" from="Control/VBoxContainer/PostButton" to="." method="_on_post_button_pressed"]
